<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="16dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/pillNameEdit"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/pill_name" />

    <Spinner
        android:id="@+id/pillCountSpinner"
        android:layout_width="match_parent"
        android:layout_height="65dp"
         />

    <Spinner
        android:id="@+id/recurrenceSpinner"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/recurrence" />

    <Spinner
        android:id="@+id/containerSpinner"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/container" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:text="@string/date" />

    <Button
        android:id="@+id/timeButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@android:color/transparent"
        android:text="@string/time" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_return" />
</LinearLayout>
</ScrollView>
